<resources>
    <string name="app_name">Quiz Game</string>

    <!-- Common -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Dialog -->
    <string name="dialog_screen_title">Dialog Nickname</string>
    <string name="dialog_screen_title_choose_option">Choose Option Dialog Fragment</string>
    <string name="dialog_text_title">Warning</string>
    <string name="dialog_text_button">Play</string>
    <string name="dialog_hint_nick_name">Nick name</string>
    <string name="dialog_text_message">Enter your nick name to start the game</string>

    <string name="dialog_btn_confirm">Continue in game</string>
    <string name="dialog_btn_cancel">Leave the game</string>

    <!-- Splash -->
    <string name="splash_screen_title">Splash</string>

    <!-- Home -->
    <string name="home_screen_title">Home</string>
    <string name="home_text_play">Play</string>
    <string name="home_text_empty_state">Play to create a ranking</string>
    <string name="home_text_header_position">Position</string>
    <string name="home_text_header_player">Player name</string>
    <string name="home_text_header_score">Score</string>

    <!-- Quiz -->
    <string name="quiz_screen_title">Quiz</string>
    <string name="quiz_btn_next">Next</string>

    <!-- Result -->
    <string name="result_screen_title">Result</string>
    <string name="result_text_title">Game Result</string>
    <string name="result_text_total_hits">Hits total hits were: %1$d</string>
    <string name="result_text_total_errors">Your total errors were: %1$d</string>
    <string name="result_btn_restart">Restart game</string>
    <string name="result_btn_conclude">Finish Game</string>

    <!-- Warning -->
    <string name="warning_toast_nickname">Enter your nickname to play</string>

</resources>