<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16dp"
    android:background="@drawable/bg_shape"
    android:padding="@dimen/_16dp"
    tools:context=".ui.result.ResultFragment">

    <TextView
        android:id="@+id/text_title_result"
        style="@style/TextAppearance.MaterialComponents.Headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_text_title"
        android:textAlignment="center"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_16dp"
        android:alpha="0.1"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_result" />

    <TextView
        android:id="@+id/text_result_hits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:drawablePadding="@dimen/_4dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_hits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_view"
        tools:text="@string/result_text_total_hits" />

    <TextView
        android:id="@+id/text_result_errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:drawablePadding="@dimen/_4dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_errors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_result_hits"
        tools:text="@string/result_text_total_errors" />

    <Button
        android:id="@+id/btn_conclude"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/_48dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:backgroundTint="@color/app_blue"
        android:text="@string/result_btn_conclude"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        android:gravity="center"
        android:text="@string/result_btn_restart"
        android:textAlignment="center"
        android:textColor="@color/app_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>