<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_16dp"
    tools:context=".ui.dialog.InputNameDialogFragment">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_title"
        android:textAlignment="center"
        android:textColor="@color/app_blue"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="@dimen/_16dp" />

    <View
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_16dp"
        android:alpha="0.1"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/dialog_text_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_view" />

    <EditText
        android:id="@+id/edit_nick_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:hint="@string/dialog_hint_nick_name"
        android:layout_marginTop="@dimen/_16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:background="@drawable/bg_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_message" />

    <Button
        android:id="@+id/btn_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/bg_shape"
        android:text="@string/dialog_text_button"
        android:textSize="@dimen/_16sp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:backgroundTint="@color/app_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nick_name" />

</androidx.constraintlayout.widget.ConstraintLayout>